--- a/index.css
+++ b/index.css
@@ -33,7 +33,8 @@ h1 {
 }
 
 .container-1,
-.container-2 {
+.container-2
+{
   width: 100%;
   max-width: 400px;
   margin-top: 20px;
@@ -85,7 +86,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: #45a0a0;
 }
 
 .result {
